force-app/main/default/objects/Partner_Inventory_Record__c/fields/date_sold__c.field-meta.xml
<CustomField>
    <fullName>date_sold__c</fullName>
    <label>date_sold</label>
    <type>Date</type>
</CustomField>