force-app/main/default/objects/Partner_Inventory_Record__c/fields/make__c.field-meta.xml
<CustomField>
    <fullName>make__c</fullName>
    <label>make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>