force-app/main/default/objects/Partner_Inventory_Record__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>