force-app/main/default/objects/Partner_Inventory_Record__c/fields/packageid__c.field-meta.xml
<CustomField>
    <fullName>packageid__c</fullName>
    <externalId>true</externalId>
    <label>packageid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>