force-app/main/default/objects/Partner_Inventory_Record__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seria</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Partner Inventory Records</relationshipLabel>
    <relationshipName>Partner_Inventory_Records</relationshipName>
    <type>Lookup</type>
</CustomField>