force-app/main/default/objects/Partner_Inventory_Record__c/fields/serial_number__c.field-meta.xml
<CustomField>
    <fullName>serial_number__c</fullName>
    <externalId>true</externalId>
    <label>serial_number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>