force-app/main/default/objects/Partner_Inventory_Record__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>